drobne upravy, spravne taxi_marimo_map

--- a/02_Data_prvy_pohlad.ipynb
+++ b/02_Data_prvy_pohlad.ipynb
@@ -155,33 +155,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6defe23d-ee78-4425-9da0-c069aca72d77",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# napada nas funkcia pre min, max lubovolneho stlpca v dataframe\n",
-    "def minmax(df, col):\n",
-    "    return df[col].min(), df[col].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e511914-e922-4a1b-bc83-5d77ebbcdc6a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "for col in df_rtimes.columns:\n",
-    "    print(f'{col}: ', minmax(df_rtimes, col))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a87bf369-d48a-406e-aadd-4be0a3fef590",
    "metadata": {},
@@ -199,7 +172,8 @@
    "outputs": [],
    "source": [
     "# velke casy jazd 1440/60 je 24 hod.!\n",
-    "df_rtimes = df_rtimes.filter(~(pl.col('rtime') > 120)) # asi im osmyklo o den, dame prec\n",
+    "# df_rtimes = \n",
+    "df_rtimes.filter(~(pl.col('rtime') > 1400)) # asi im osmyklo o den, dame prec\n",
     "df_rtimes.shape"
    ]
   },
@@ -255,7 +229,8 @@
    "source": [
     "# ked 0 dat 1 pasaziera, hoci  by bol aj taxikar, neskor vycistime nezalatene\n",
     "\n",
-    "df_rtimes = df_rtimes.with_columns(pl.when((pl.col('passengers') == 0))\n",
+    "# df_rtimes = \n",
+    "df_rtimes.with_columns(pl.when((pl.col('passengers') == 0))\n",
     "                                     .then(1)\n",
     "                                     .otherwise(pl.col('passengers'))\n",
     "                                     .alias('passengers')) # ['passengers'].head()"
@@ -308,8 +283,8 @@
    "outputs": [],
    "source": [
     "# podozrivo velka max. vzdialenost, kde to bolo? neustriehli sme...\n",
-    "df_rtimes.filter(pl.col('distance') == minmax(df, 'distance')[1])\n",
-    "df_rtimes = df_rtimes.filter(pl.col('distance') < 45) # hadam v NY nebudu vacsie vzdial."
+    "df_rtimes.filter(pl.col('distance') == df_rtimes['distance'].max())\n",
+    "# df_rtimes = df_rtimes.filter(pl.col('distance') < 45) # hadam v NY nebudu vacsie vzdial."
    ]
   },
   {
@@ -322,10 +297,10 @@
    "outputs": [],
    "source": [
     "# velka platba, 500 $\n",
-    "df_rtimes.filter(pl.col('fare') == minmax(df_rtimes, 'fare')[1])\n",
+    "df_rtimes.filter(pl.col('fare') == df_rtimes['fare'].max())\n",
     "# nechame pod 90 $ a tringel pod 40 $\n",
-    "df_rtimes = df_rtimes.filter(pl.col('fare') < 90)\n",
-    "df_rtimes = df_rtimes.filter(pl.col('tip') < 40)"
+    "# df_rtimes = df_rtimes.filter(pl.col('fare') < 90)\n",
+    "# df_rtimes = df_rtimes.filter(pl.col('tip') < 40)"
    ]
   },
   {
