--- a/03_Prve_grafy.ipynb
+++ b/03_Prve_grafy.ipynb
@@ -44,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "df.min(), df.max()"
+    "df.min(), df.max() # min. a max. vo vsetkych stlpcov"
    ]
   },
   {
@@ -66,11 +66,11 @@
    "outputs": [],
    "source": [
     "# pocet cestujucich, najskor bez 'alias'\n",
-    "# df_days = (df.group_by(pl.col('pick_dt').dt.day())\n",
-    "#              .agg(pl.col('passengers').sum()))\n",
+    "(df.group_by(pl.col('pick_dt').dt.day())\n",
+    "               .agg(pl.col('passengers').sum()))\n",
     "           \n",
-    "df_days = (df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
-    "             .agg(pl.col('passengers').sum().alias('pass_count')))"
+    "# df_days = (df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
+    "#              .agg(pl.col('passengers').sum().alias('pass_count')))"
    ]
   },
   {
@@ -144,10 +144,17 @@
    "source": [
     "# zrobime frejmu, kde budu vsetky tie tri veliciny agregovane podla dni - ako hore, len zoznam troch stlpcov namiesto jedneho\n",
     "\n",
-    "df_days = (df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
+    "# df_days = \n",
+    "(df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
     "             .agg([pl.col('passengers').sum().alias('pass_count'),\n",
     "                   pl.col('fare').sum().alias('day_fares'), \n",
-    "                   pl.col('fare').count().alias('fares_count')]))  # .sort(by='pick_day')"
+    "                   pl.col('fare').count().alias('fares_count')]))  # .sort(by='pick_day')\n",
+    "\n",
+    "# namiesto alias mozno dat nove nazvy stlpcov\n",
+    "df_days = (df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
+    "             .agg(pass_count=pl.col('passengers').sum(),\n",
+    "                  day_fares=pl.col('fare').sum(), \n",
+    "                  fares_count= pl.col('fare').count())) # .sort(by='pick_day').head()"
    ]
   },
   {
@@ -174,24 +181,11 @@
    "source": [
     "# mozeme nakreslit kombinovany graf pre pocet jazd a pocet cestujucich (malo by to byt zhruba radovo rovnake)\n",
     "\n",
-    "pass_fares_plot = px.bar(df_days, x='pick_day', y=['pass_count', 'fares_count'],) #  barmode='group',)\n",
+    "pass_fares_plot = px.bar(df_days, x='pick_day', y=['pass_count', 'fares_count'], barmode='group',)\n",
     "                         # labels={'pick_day':'Dni', 'value': 'Hodnoty', 'variable': 'Premenná'})\n",
     "# zobrazenie sa nemiesa s jeho rozpolozenim (layout)    \n",
-    "pass_fares_plot.update_layout(xaxis=dict(tickmode='array', tickvals=list(range(1, 32))))\n",
+    "# pass_fares_plot.update_layout(xaxis=dict(tickmode='array', tickvals=list(range(1, 32))))\n",
     "pass_fares_plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b60e1332-f81d-4da7-bc64-7f36ff5e9c7e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# priemerny pocet cestujucich na jednu jazdu? \n",
-    "# print(f\"{df_days['pass_count'].sum() / df_days['fares_count'].sum() :.3f}\")"
    ]
   },
   {
@@ -246,7 +240,7 @@
    },
    "outputs": [],
    "source": [
-    "monthly_plot(df)"
+    "monthly_plot('Podľa dní')"
    ]
   },
   {
@@ -258,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "monthly_plot(df, False)"
+    "monthly_plot('Podľa nední') #  facina, samozrejme"
    ]
   },
   {
@@ -280,7 +274,7 @@
    "outputs": [],
    "source": [
     "df_weekday = (df.group_by(pl.col('pick_dt').dt.weekday())\n",
-    "                .agg(pl.col('passengers').count().alias('pass_count'))  # co keby sum namiesto count?\n",
+    "                .agg(pl.col('passengers').sum().alias('pass_count'))\n",
     "                .sort(by='pick_dt'))\n",
     "df_weekday = df_weekday.rename({'pick_dt': 'pick_day'})"
    ]
@@ -294,7 +288,8 @@
    },
    "outputs": [],
    "source": [
-    "df_weekday  # je to len 7 poloziek, netreba head. z dokumentacie polars - 1 je pondelok"
+    "df_weekday  # je to len 7 poloziek, netreba head. z dokumentacie polars - 1 je pondelok\n",
+    "# df_weekday['pass_count'].sum() # hruba kontrola"
    ]
   },
   {
@@ -307,10 +302,11 @@
    "outputs": [],
    "source": [
     "# nie je to v poriadku, nie kazdy den v tyzdni je v januari 2015 rovnaky pocet raz\n",
+    "# chceme pocty za jeden pondelok, utorok, ...\n",
     "# klucove - aky den bol 1. januara 2015?\n",
     "# datetime ma funkciu weekday \n",
     "from datetime import date\n",
-    "print(date(2015, 1, 1).weekday()) # 0 je tu pondelok, ... 6 je nedela"
+    "print(date(2015, 1, 1).weekday()) # 0 je tu pondelok, ... 6 je nedela - nie ako v polars"
    ]
   },
   {
@@ -341,8 +337,8 @@
     "graf = px.bar(df_weekday, x='pick_day', y='pass_count', barmode='group', width=750, height=400)\n",
     "xtext = ['Pondelok', 'Utorok', 'Streda', 'Štvrtok', 'Piatok', 'Sobota', 'Nedeľa']\n",
     "graf.update_layout(xaxis=dict(tickmode='array', tickvals=list(range(1, 8)), title='Deň v týždni',\n",
-    "                   ticktext=xtext, tickangle=0), yaxis=dict(title=\"Priem. počet jázd\"))\n",
-    "# zopakovat pre sum namiesto count"
+    "                   ticktext=xtext, tickangle=0), yaxis=dict(title=\"Priem. počet cestujúcich\"))\n",
+    "# zopakujte s count() namiesto sum() - bude priem. pocet jazd"
    ]
   },
   {
@@ -358,12 +354,12 @@
     "                     .agg(pl.col('passengers').count().alias('pass_count'))  # co keby sum namiesto count?\n",
     "                     .sort(by='pick_dt'))\n",
     "    df_weekday = df_weekday.rename({'pick_dt': 'pick_day'})\n",
-    "    pocty = np.array([4, 4, 4, 5, 5, 5, 4])  # preco nie len list?\n",
+    "    pocty = np.array([4, 4, 4, 5, 5, 5, 4])\n",
     "    df_weekday = df_weekday.with_columns(pl.col('pass_count') / pocty)\n",
     "    graf = px.bar(df_weekday, x='pick_day', y='pass_count', barmode='group', width=750, height=400)\n",
     "    xtext = ['Pondelok', 'Utorok', 'Streda', 'Štvrtok', 'Piatok', 'Sobota', 'Nedeľa']\n",
     "    graf.update_layout(xaxis=dict(tickmode='array', tickvals=list(range(1, 8)), title='Deň v týždni',\n",
-    "                       ticktext=xtext, tickangle=0), yaxis=dict(title=\"Priem. počet jázd\"))\n",
+    "                       ticktext=xtext, tickangle=0), yaxis=dict(title=\"Priem. počet cestujúcich\"))\n",
     "    return graf\n",
     "\n",
     "# v aplikacii budu tie tri grafy - mesacne podla hodin, dni a tyzdenny v jednej 'zalozke'\n",
