--- a/04_Grafy_po_dnoch_a_hodinach.ipynb
+++ b/04_Grafy_po_dnoch_a_hodinach.ipynb
@@ -47,7 +47,8 @@
    "source": [
     "# Potrebujeme zoskupit data podla dni a hodin; groupped sama o sebe je nam netreba\n",
     "groupped = df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'), \n",
-    "                       pl.col('pick_dt').dt.hour().alias('pick_hour'))"
+    "                       pl.col('pick_dt').dt.hour().alias('pick_hour'))\n",
+    "type(groupped)"
    ]
   },
   {
@@ -59,6 +60,8 @@
    },
    "outputs": [],
    "source": [
+    "# groupped nie je datafrejma, ale GroupBy, z nej vela osohu nie je, no hodi sa na agregaciu\n",
+    "# to dole je len pre zaujimavost, ako je GroupBy zostrojena\n",
     "kolko = 5\n",
     "for name, data in groupped:  \n",
     "    print(name)\n",
@@ -103,7 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "# ako vyberieme jeden den? lahko.\n",
+    "# ako vyberieme jeden den? lahko, napr. 14. jan.\n",
     "df_days.filter(pl.col('pick_day') == 14).sort(by='pick_hour').head()\n",
     "df_days.columns"
    ]
