--- a/05_Histogramy_vzdialenosti_casy.ipynb
+++ b/05_Histogramy_vzdialenosti_casy.ipynb
@@ -25,9 +25,10 @@
    "outputs": [],
    "source": [
     "# nacitame vycistenu frejmu, stlpce, co pouzijeme v tomto NB, \n",
-    "cols = ['pick_dt', 'drop_dt', 'distance']\n",
+    "cols = ['distance', 'rtime']\n",
     "df = pl.scan_parquet('data/nyc_taxi310k.parq')\n",
-    "df = df.select(cols).collect()"
+    "df_dt = df.select(cols).collect()\n",
+    "df_dt.columns"
    ]
   },
   {
@@ -36,45 +37,6 @@
    "metadata": {},
    "source": [
     "### V tomto NB nás budú zaujímať časy jázd a prejazdené vzdialenosti"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b9e8307-cbfa-4355-bf42-d3889c040bba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vzdialenosti mame v stplci 'distance', ako ziskame casy?\n",
-    "(df['drop_dt'] - df['pick_dt']).head(6) #.cast(pl.Float32)/1000/60"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7f3b0f8-3b3f-418b-b2db-9d2e7285e891",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# pridame ako stlpec do df\n",
-    "df = df.with_columns(((pl.col('drop_dt') - pl.col('pick_dt')).cast(pl.Float32) / 1000 / 60).alias('rtimes'))\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aac8ece7-9edb-49ac-8a1b-133ce0750bdd",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# na figu su nam teraz pick_dt a drop_dt, znicime ich\n",
-    "df_dt = df.drop(['pick_dt', 'drop_dt'])  # nie je to 'in_place'\n",
-    "df_dt.head()"
    ]
   },
   {
@@ -102,7 +64,7 @@
    "source": [
     "# ako vela je dlhych a dlhotrvajucich jazd? staci pocet\n",
     "sd = df_dt.filter(pl.col('distance') > 10).shape # skusit 20, ...\n",
-    "st = df_dt.filter(pl.col('rtimes') > 30).shape # 120, 60, ...\n",
+    "st = df_dt.filter(pl.col('rtime') > 30).shape # 120, 60, ...\n",
     "print(sd, st)"
    ]
   },
@@ -117,7 +79,7 @@
    "source": [
     "# na zaciatok pre vzd. horna hranica 10, pre casy 30\n",
     "yd, xd = np.histogram(df_dt['distance'], bins=20, range=(0, 10)) # pochopit, co to vrati\n",
-    "yt, xt = np.histogram(df_dt['rtimes'], bins=20, range=(0, 30))\n",
+    "yt, xt = np.histogram(df_dt['rtime'], bins=20, range=(0, 30))\n",
     "# np.histogram?"
    ]
   },
@@ -143,7 +105,7 @@
     "    return plot_histo('distance', (0, 8), bins)\n",
     "\n",
     "def histo_times(bins):\n",
-    "    return plot_histo('rtimes', (0, 35), bins)"
+    "    return plot_histo('rtime', (0, 35), bins)"
    ]
   },
   {
@@ -155,9 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_histo('rtimes', (0, 40), 40) # skusat 'distance', rozne nbins aj hornu hranicu\n",
-    "# preco sa pri niektorom pocte binov histogram pre vzdialenosti 'rozpada' ?\n",
-    "# df.filter(pl.col('distance') == pl.col('distance').round(1))"
+    "plot_histo('rtime', (0, 40), 40) # skusat 'distance', rozne nbins aj hornu hranicu"
    ]
   },
   {
@@ -169,7 +129,9 @@
    },
    "outputs": [],
    "source": [
-    "# plot_histo('rtimes', (0, 35), 40) "
+    "plot_histo('distance', (0, 10), 20)\n",
+    "# preco sa pri niektorom pocte binov histogram pre vzdialenosti 'rozpada' ?\n",
+    "# df.filter(pl.col('distance') == pl.col('distance').round(1))"
    ]
   },
   {
@@ -185,21 +147,8 @@
    "id": "656c3777-ef97-4348-8060-a4c680c5a85b",
    "metadata": {},
    "source": [
-    "#### Pridáme do `datafunkcie.py` funkcie `plot_histo`, `histo_times`, `histo_dists` aj`dt_frame` \n",
+    "#### Pridáme do `datafunkcie.py` funkcie `plot_histo`, `histo_times`, `histo_dists`\n",
     "#### pre vyrobu datafrejmy s časmi jázd a vzdialenosťami "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65aeb76f-8ad6-4a76-8c0e-243d2ae45502",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dt_frame(frm): # frm bude povodna df, vyrobime df_dt\n",
-    "    df_dt = frm.with_columns(((pl.col('drop_dt') - pl.col('pick_dt')).cast(pl.Float32)/1000/60).alias('rtimes'))\n",
-    "    df_dt = df_dt.drop(['pick_dt', 'drop_dt'])\n",
-    "    return df_dt"
    ]
   }
  ],
