--- a/06_Mapa_konecne.ipynb
+++ b/06_Mapa_konecne.ipynb
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "# pre nastup, vystup atlpce zacinajuce pick_ alebo drop_\n",
+    "# pre nastup, vystup atlpce zacinajuce pick_ alebo drop_ - priklad vyberu podla regularnych vyrazov pre stlpce\n",
     "df_pickdrop = df.select(pl.col(\"^pick_|drop_.*$\"))\n",
     "df_pickdrop.columns"
    ]
