drobne upravy, pridane percentily

--- a/03_Prve_grafy.ipynb
+++ b/03_Prve_grafy.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import polars as pl\n",
     "import plotly.express as px\n",
-    "import numpy as np"
+    "import numpy as np  # pre vektorove operacie"
    ]
   },
   {
@@ -67,10 +67,10 @@
    "source": [
     "# pocet cestujucich, najskor bez 'alias'\n",
     "(df.group_by(pl.col('pick_dt').dt.day())\n",
-    "               .agg(pl.col('passengers').sum()))\n",
+    "            .agg(pl.col('passengers').sum()))\n",
     "           \n",
-    "# df_days = (df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
-    "#              .agg(pl.col('passengers').sum().alias('pass_count')))"
+    "df_days = (df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
+    "             .agg(pl.col('passengers').sum().alias('pass_count')))"
    ]
   },
   {
@@ -105,9 +105,9 @@
    },
    "outputs": [],
    "source": [
-    "pass_plot = px.bar(df_days, x='pick_day', y='pass_count') #, labels={'pick_day':'Dni', 'pass_count': 'Cestujúci'})\n",
+    "pass_plot = px.bar(df_days, x='pick_day', y='pass_count', labels={'pick_day':'Dni', 'pass_count': 'Cestujúci'})\n",
     "# dni v mesiaci chceme pre kazdy den\n",
-    "# pass_plot.update_layout(xaxis=dict(tickmode='array', tickvals=list(range(1, 32))))"
+    "pass_plot.update_layout(xaxis=dict(tickmode='array', tickvals=list(range(1, 32))));"
    ]
   },
   {
@@ -148,13 +148,13 @@
     "(df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
     "             .agg([pl.col('passengers').sum().alias('pass_count'),\n",
     "                   pl.col('fare').sum().alias('day_fares'), \n",
-    "                   pl.col('fare').count().alias('fares_count')]))  # .sort(by='pick_day')\n",
+    "                   pl.col('fare').count().alias('fares_count')])).sort(by='pick_day')\n",
     "\n",
     "# namiesto alias mozno dat nove nazvy stlpcov\n",
     "df_days = (df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'))\n",
     "             .agg(pass_count=pl.col('passengers').sum(),\n",
     "                  day_fares=pl.col('fare').sum(), \n",
-    "                  fares_count= pl.col('fare').count())) # .sort(by='pick_day').head()"
+    "                  fares_count= pl.col('fare').count())).sort(by='pick_day')"
    ]
   },
   {
