--- a/04_Grafy_po_dnoch_a_hodinach.ipynb
+++ b/04_Grafy_po_dnoch_a_hodinach.ipynb
@@ -33,7 +33,7 @@
     "# nacitame vycistenu frejmu, len stlpce, co pouzijeme v tomto NB\n",
     "cols = ['pick_dt', 'passengers', 'fare']\n",
     "df = pl.scan_parquet('data/nyc_taxi310k.parq')\n",
-    "df = df.select(cols).collect()     "
+    "df = df.select(cols).collect()   "
    ]
   },
   {
@@ -62,7 +62,7 @@
    "source": [
     "# groupped nie je datafrejma, ale GroupBy, z nej vela osohu nie je, no hodi sa na agregaciu\n",
     "# to dole je len pre zaujimavost, ako je GroupBy zostrojena\n",
-    "kolko = 5\n",
+    "kolko = 3\n",
     "for name, data in groupped:  \n",
     "    print(name)\n",
     "    print(data)\n",
@@ -122,7 +122,7 @@
    "source": [
     "# funkcia pre vyrobenie df_days z povodnej df; urobime grupovanie a agregacie na jeden sup\n",
     "def daily_frame(frm):   # vyvolame s df ako frm\n",
-    "    df_days = df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'), \n",
+    "    df_days = frm.group_by(pl.col('pick_dt').dt.day().alias('pick_day'), \n",
     "                          pl.col('pick_dt').dt.hour().alias('pick_hour'))\\\n",
     "                         .agg([pl.col('passengers').sum().alias('pass_count'),\n",
     "                               pl.col('fare').count().alias('fares_count'),\n",
@@ -156,7 +156,7 @@
    },
    "outputs": [],
    "source": [
-    "daily_plot(14)"
+    "daily_plot(26)"
    ]
   },
   {
