--- a/05_Histogramy_vzdialenosti_casy.ipynb
+++ b/05_Histogramy_vzdialenosti_casy.ipynb
@@ -63,9 +63,9 @@
    "outputs": [],
    "source": [
     "# ako vela je dlhych a dlhotrvajucich jazd? staci pocet\n",
-    "sd = df_dt.filter(pl.col('distance') > 10).shape # skusit 20, ...\n",
-    "st = df_dt.filter(pl.col('rtime') > 30).shape # 120, 60, ...\n",
-    "print(sd, st)"
+    "sd = df_dt.filter(pl.col('distance') > 15) # skusit 20, ...\n",
+    "st = df_dt.filter(pl.col('rtime') > 60) # 120, 60, ...\n",
+    "# print(sd, st)"
    ]
   },
   {
@@ -78,9 +78,12 @@
    "outputs": [],
    "source": [
     "# na zaciatok pre vzd. horna hranica 10, pre casy 30\n",
-    "yd, xd = np.histogram(df_dt['distance'], bins=20, range=(0, 10)) # pochopit, co to vrati\n",
-    "yt, xt = np.histogram(df_dt['rtime'], bins=20, range=(0, 30))\n",
-    "# np.histogram?"
+    "# motivacia - kvantil - aka cast z 1 je nalavo od neho\n",
+    "# df_dt['distance'].quantile(0.97)\n",
+    "# df_dt['rtime'].quantile(0.97)\n",
+    "# pochopit, co to vrati\n",
+    "yt, xt = np.histogram(df_dt['rtime'], bins=20, range=(0, 40))\n",
+    "print(yt, xt)"
    ]
   },
   {
@@ -129,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_histo('distance', (0, 10), 20)\n",
+    "plot_histo('distance', (0, 8), 80)\n",
     "# preco sa pri niektorom pocte binov histogram pre vzdialenosti 'rozpada' ?\n",
     "# df.filter(pl.col('distance') == pl.col('distance').round(1))"
    ]
