--- a/06_Mapa_konecne.ipynb
+++ b/06_Mapa_konecne.ipynb
@@ -7,8 +7,9 @@
     "tags": []
    },
    "source": [
-    "### Zaujímame sa o miesta na mape, kde ľudia nastupovali a vystupovali. Podľa dní aj hodín.\n",
-    "#### Na to môžeme použiť už známy modul `plotly`, alebo špeciálny mapový modul `ipyleaflet`. Nech je zatiaľ `plotly`."
+    "### Zaujímame sa o miesta na mape, kde ľudia nastupovali a vystupovali. \n",
+    "### Nakreslíme podľa dní aj hodín.\n",
+    "#### Na to môžeme použiť už známy modul `plotly`, alebo špeciálny mapový modul `ipyleaflet`. Nech je zatiaľ `plotly`, konkrétne funkcia `px.scatter_mapbox`."
    ]
   },
   {
@@ -78,7 +79,7 @@
    "outputs": [],
    "source": [
     "# px.scatter_mapbox je funkcia pre mapy v plotly\n",
-    "mapa = px.scatter_mapbox(df_pickdh, lat='pick_lat', lon='pick_lon', mapbox_style=\"open-street-map\", \n",
+    "mapa = px.scatter_mapbox(df_pickdh, lat='pick_lat', lon='pick_lon', mapbox_style=\"open-street-map\",\n",
     "                         zoom=10, color_discrete_sequence=[\"darkblue\"], width=500, height=500, opacity=0.3, \n",
     "                         title=f'Počet jázd: {df_pickdh.shape[0]}')\n",
     "mapa.update_traces(marker={\"size\": 4})\n",
@@ -123,7 +124,7 @@
    },
    "outputs": [],
    "source": [
-    "pn.Row(map_plot(df_pickdrop, 27, 12), map_plot(df_pickdrop, 27, 12, False))"
+    "pn.Row(map_plot(df_pickdrop, 25, 12), map_plot(df_pickdrop, 25, 12, False))"
    ]
   },
   {
