--- a/07_Panel_a_mapa.ipynb
+++ b/07_Panel_a_mapa.ipynb
@@ -12,7 +12,7 @@
     "import polars as pl\n",
     "import panel as pn\n",
     "import panel.widgets as pnw\n",
-    "from final.data_funkcie import df, pick_plot, drop_plot\n",
+    "from final.data_funkcie import pick_plot, drop_plot\n",
     "pn.extension('plotly', 'ipywidgets')"
    ]
   },
@@ -70,7 +70,8 @@
    },
    "outputs": [],
    "source": [
-    "#### Zviažeme (`bind`) argumenty `day, hour` vo funkcii `map_plot` s hodnotami (value) tých posuvníkov"
+    "#### Zviažeme (`bind`) argumenty `day, hour` vo funkciach `pick_plot`\n",
+    "#### `drop_plot` s hodnotami (value) tých posuvníkov"
    ]
   },
   {
