--- a/08_Panel_Aplikacia.ipynb
+++ b/08_Panel_Aplikacia.ipynb
@@ -13,7 +13,7 @@
     "import panel.widgets as pnw\n",
     "from final.data_funkcie import pick_plot, drop_plot, view_month_week, daily_plot, histo_dists, histo_times \n",
     "pn.extension('plotly', 'ipywidgets')\n",
-    "# vsimnime si, ze ziadnu datafrejmu neimportujeme, vsetko sa deja v data_funkcie"
+    "# vsimnime si, ze ziadnu datafrejmu neimportujeme, vsetko sa deje v data_funkcie"
    ]
   },
   {
@@ -30,7 +30,9 @@
     "hour_choose = pnw.IntSlider(start=0, end=23, value=11, width=300, name='Hodina')\n",
     "direction = pnw.RadioBoxGroup(options=['Nástup','Výstup'], inline=True)\n",
     "day_hour_choose = pnw.RadioBoxGroup(options=['Podľa dní','Podľa hodín', 'Dni v týždni (nástupy)'], inline=True)\n",
-    "nbins_choose = pnw.IntSlider(start=10, end=120, value=20, width=250, name='Počet tried')"
+    "nbins_choose = pnw.IntSlider(start=10, end=120, value=20, width=250, name='Počet tried')\n",
+    "# percentily pre histogramy, nove\n",
+    "quant_choose = pnw.IntSlider(start=5, end=95, step=5, value=50, width=250, name='Percentil')"
    ]
   },
   {
@@ -80,7 +82,7 @@
    "source": [
     "tabs = pn.Tabs(('Grafy mesačné', tab_monthly),\n",
     "               ('Miesta na mape', tab_map), dynamic=True)  # co je dynamic\n",
-    "# tabs.servable() # vyskusat panel preview"
+    "tabs.servable() # vyskusat panel preview"
    ]
   },
   {
@@ -113,9 +115,10 @@
    },
    "outputs": [],
    "source": [
-    "bind_dists = pn.bind(histo_dists, bins=nbins_choose)\n",
-    "bind_times = pn.bind(histo_times, bins=nbins_choose)\n",
-    "tab_histo = pn.Column(nbins_choose, bind_dists, bind_times)"
+    "# tu pridane - kvantily (percentily)\n",
+    "bind_dists = pn.bind(histo_dists, bins=nbins_choose, quant=quant_choose)\n",
+    "bind_times = pn.bind(histo_times, bins=nbins_choose, quant=quant_choose)\n",
+    "tab_histo = pn.Column(pn.Row(nbins_choose, quant_choose), bind_dists, bind_times)"
    ]
   },
   {
@@ -156,8 +159,8 @@
    },
    "outputs": [],
    "source": [
-    "app = pn.Column(nadpis, tabs).servable()\n",
-    "app"
+    "# app = pn.Column(nadpis, tabs).servable()\n",
+    "# app"
    ]
   }
  ],
