--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -79,9 +79,10 @@
    "id": "ca86fa6c-556e-4fd8-9105-1c7be3ad855e",
    "metadata": {},
    "source": [
-    "### <a href=\"09_Marimo_Aplikacia.py\">Tá istá aplikácia s marimo, len pozrieť zdroják</a>\n",
-    "\n",
-    "### Ako to funguje, poďme do Terminálu a tam si to povieme."
+    "### Tá istá aplikácia s marimo.\n",
+    "#### Všetko z `final/data_funkcie.py` je znovu použiteľné. Namiesto `panel` bude `marimo`\n",
+    "#### pre grafické prvky a záložky (taby). \n",
+    "#### Ako to funguje, poďme do Terminálu a tam si to pozrieme."
    ]
   },
   {
