Marimo_pokec pridane

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -79,10 +79,7 @@
    "id": "ca86fa6c-556e-4fd8-9105-1c7be3ad855e",
    "metadata": {},
    "source": [
-    "### Tá istá aplikácia s marimo.\n",
-    "#### Všetko z `final/data_funkcie.py` je znovu použiteľné. Namiesto `panel` bude `marimo`\n",
-    "#### pre grafické prvky a záložky (taby). \n",
-    "#### Ako to funguje, poďme do Terminálu a tam si to pozrieme."
+    "### <a href=\"Marimo_pokec.ipynb\">Pokec o marimo a naša aplikácia v ňom</a>"
    ]
   },
   {
