rovnocenne panel a marimo

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -58,10 +58,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29e94798-6e9e-410e-bbd3-c1cac19a0f3e",
+   "metadata": {},
+   "source": [
+    "### <a href=\"07_Marimo_a_mapa.py\">Základná `marimo` aplikácia (mapa)</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d2ec2081-1cb4-474f-94b6-c45bedc4cf93",
    "metadata": {},
    "source": [
     "### <a href=\"08_Panel_Aplikacia.ipynb\">Panel aplikácia skoro hotová</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "531a09cc-bbb7-4871-9438-ea8791a0cb34",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### <a href=\"08_Marimo_Aplikacia.py\">To isté s `marimo`</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71dad5b7-d45d-4e0d-9026-75cd93c40f13",
+   "metadata": {},
+   "source": [
+    "### <a href=\"09_Marimo_mapa_vyber.py\">Marimo, výber na mape. Ako s panelom? Pomooóc!</a>"
    ]
   },
   {
@@ -79,7 +105,7 @@
    "id": "ca86fa6c-556e-4fd8-9105-1c7be3ad855e",
    "metadata": {},
    "source": [
-    "### <a href=\"Marimo_pokec.ipynb\">Pokec o marimo a naša aplikácia v ňom</a>"
+    "### <a href=\"Marimo_pokec.ipynb\">Marimo pokec</a>"
    ]
   },
   {
