zmienka jupyterlite v Zaver

--- a/11_Zaver.ipynb
+++ b/11_Zaver.ipynb
@@ -15,6 +15,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "70cabc4a-a54b-4557-acd1-450da1163969",
+   "metadata": {},
+   "source": [
+    "## Odkaz na github, jupyterlite implementácia:\n",
+    "- ### https://misolietavec.github.io/dawork_jupyterlite (podadresár `final_dawork`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6d92d222-cd93-4587-8acb-5c2d0bbd436b",
    "metadata": {},
    "source": [
