odkazy na videa

--- a/11_Zaver.ipynb
+++ b/11_Zaver.ipynb
@@ -33,11 +33,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f124042f-1da2-4c1f-a222-9b7c9a27b4ce",
-   "metadata": {},
+   "id": "7f469569-a3a5-437d-acc8-ce6d7f3469dc",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Pôvodný dátový súbor:\n",
-    "- ### https://feelmath.eu/Download/nyc_taxi.parq"
+    "## Videá:\n",
+    "- ### https://feelmath.eu/DAworkshop/02_Data_prvy_pohlad.mp4\n",
+    "- ### https://feelmath.eu/DAworkshop/03_Celkove_grafy.mp4 \n",
+    "- ### https://feelmath.eu/DAworkshop/04_Grafy_po_dnoch.mp4\n",
+    "- ### https://feelmath.eu/DAworkshop/05_Histogramy.mp4\n",
+    "- ### https://feelmath.eu/DAworkshop/06_Mapa_zaciatky.mp4\n",
+    "- ### https://feelmath.eu/DAworkshop/07_Panel_a_mapa.mp4\n",
+    "- ### https://feelmath.eu/DAworkshop/08_Panel_aplikacia.mp4"
    ]
   }
  ],
